"Current rate" may be given as 0xFFFFFFFF in "WDS Get Channel Rates" if "unknown" or "n/a" because this will always happen whenever there is no current network connection.
Instead of returning a data rate of 4294967295bps, we should report "unknown".
[14 2月 2019, 09:29:36] [Debug] [/dev/cdc-wdm1] received generic response (translated)...
<<<<<< QMUX:
<<<<<< length = 77
<<<<<< flags = 0x80
<<<<<< service = "wds"
<<<<<< client = 34
<<<<<< QMI:
<<<<<< flags = "response"
<<<<<< transaction = 1
<<<<<< tlv_length = 65
<<<<<< message = "Get Channel Rates" (0x0023)
<<<<<< TLV:
<<<<<< type = "Result" (0x02)
<<<<<< length = 4
<<<<<< value = 00:00:00:00
<<<<<< translated = SUCCESS
<<<<<< TLV:
<<<<<< type = "Channel Rates" (0x01)
<<<<<< length = 16
<<<<<< value = FF:FF:FF:FF:FF:FF:FF:FF:80:D1:F0:08:00:CA:9A:3B
<<<<<< translated = [ channel_tx_rate_bps = '4294967295' channel_rx_rate_bps = '4294967295' max_channel_tx_rate_bps = '150000000' max_channel_rx_rate_bps = '1000000000' ]
<<<<<< TLV:
<<<<<< type = 0x10
<<<<<< length = 36
<<<<<< value = 02:00:00:00:FF:FF:FF:FF:00:00:00:00:FF:FF:FF:FF:00:00:00:00:00:00:00:00:00:00:00:00:E8:03:00:00:00:00:00:00
Channel data rates:
Current TX rate: 4294967295bps
Current RX rate: 4294967295bps
Max TX rate: 150000000bps
Max RX rate: 1000000000bps
Edited by Aleksander Morgado