wds: handle unknown current rates properly

When the modem is not connected, the current rate reported will be
0xFFFFFFFF, which we should detect and not treat as a valid rate.

https://gitlab.freedesktop.org/mobile-broadband/libqmi/issues/8
(cherry picked from commit 635303216bb0af784d58f14d6983ef39322210aa)